--- a/scripts/config.sh.template
+++ b/scripts/config.sh.template
@@ -4,6 +4,6 @@ APP_NAME=HelloWorld
 APPETIZE_ANDROID_ID=@@APPETIZE_ANDROID_ID@@
 APPETIZE_IOS_ID=@@APPETIZE_IOS_ID@@
 
-DELIVERY_URL=ftp://ftp.astalavistababy.agency/delivery/${APP_NAME,,}
+DELIVERY_URL=ftp://ftp.astalavistababy.agency/delivery/$(echo $APP_NAME | sed 's/\(.*\)/\L\1/')
 
 PROJECT_DIR=$(pwd)
