--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -99,7 +99,7 @@ android {
     buildToolsVersion "23.0.1"
 
     defaultConfig {
-        applicationId "com.helloworld.app"
+        applicationId "com.helloworld.package"
         minSdkVersion 16
         targetSdkVersion 22
         versionCode 100
