--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,6 @@
-# Uncomment the next line to define a global platform for your project
-# platform :ios, '9.0'
+source 'https://github.com/CocoaPods/Specs.git'
+
+platform :ios, '8.0'
 
 target 'HelloWorld' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
@@ -7,31 +8,24 @@ target 'HelloWorld' do
 
   ### START - React Native http://facebook.github.io/react-native/docs/integration-with-existing-apps.html#configuring-cocoapods-dependencies
 
-  # Your 'node_modules' directory is probably in the root of your project,
-  # but if not, adjust the `:path` accordingly
   pod 'React', :path => '../node_modules/react-native', :subspecs => [
     'Core',
-    'CxxBridge', # Include this for RN >= 0.47
-    'DevSupport', # Include this to enable In-App Devmenu if RN >= 0.43
+    'CxxBridge',
+    'DevSupport',
     'RCTText',
+    'RCTImage',
     'RCTNetwork',
     'RCTWebSocket', # Needed for debugging
     'RCTAnimation', # Needed for FlatList and animations running on native UI thread
-    # Add any other subspecs you want to use in your project
   ]
-  # Explicitly include Yoga if you are using RN >= 0.42.0
+
   pod 'yoga', :path => '../node_modules/react-native/ReactCommon/yoga'
 
-  # Third party deps podspec link
   pod 'DoubleConversion', :podspec => '../node_modules/react-native/third-party-podspecs/DoubleConversion.podspec'
-  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/GLog.podspec'
+  pod 'glog', :podspec => '../node_modules/react-native/third-party-podspecs/glog.podspec'
   pod 'Folly', :podspec => '../node_modules/react-native/third-party-podspecs/Folly.podspec'
 
   ### END - React Native
-
-  # Pods for build
-
-  # Pods for testing
 
   target 'HelloWorldTests' do
     inherit! :search_paths
@@ -41,7 +35,7 @@ end
 
 post_install do |installer|
   installer.pods_project.targets.each do |target|
-    if target.name == "React"
+    if target.name == 'React'
       target.remove_from_project
     end
   end
