--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -74,7 +74,7 @@ import com.android.build.OutputFile
 
 project.ext.react = [
     entryFile: "index.js",
-    bundleInDebug: false,
+    bundleInDebug: "${System.env.FORCE_BUNDLING}".toBoolean(),
 ]
 
 apply from: "../../node_modules/react-native/react.gradle"
@@ -108,6 +108,16 @@ android {
             abiFilters "armeabi-v7a", "x86"
         }
     }
+    signingConfigs {
+        release {
+            if (System.env.RELEASE_KEYSTORE_FILE) {
+                storeFile file(System.env.RELEASE_KEYSTORE_FILE)
+                storePassword System.env.RELEASE_KEYSTORE_PASSWORD
+                keyAlias System.env.RELEASE_KEYSTORE_KEY_ALIAS
+                keyPassword System.env.RELEASE_KEYSTORE_KEY_PASSWORD
+            }
+        }
+    }
     splits {
         abi {
             reset()
@@ -118,6 +128,7 @@ android {
     }
     buildTypes {
         release {
+            signingConfig signingConfigs.release
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
         }
