--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -95,8 +95,8 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
-    compileSdkVersion 26
-    buildToolsVersion "26.0.2"
+    compileSdkVersion rootProject.ext.compileSdkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
 
     defaultConfig {
         applicationId "com.helloworld.package"
@@ -152,7 +152,9 @@ dependencies {
     compile project(':react-native-splash-screen')
     compile project(':react-native-keychain')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile "com.android.support:appcompat-v7:27.0.2"
+    compile ("com.android.support:appcompat-v7:26.0.2") {
+        force = true
+    }
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
