--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -18,3 +18,6 @@
 # org.gradle.parallel=true
 
 android.useDeprecatedNdk=true
+
+# @FIX https://github.com/facebook/react-native/issues/16906
+android.enableAapt2=false
