--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,7 +17,7 @@ lint:critical:
     - docker
   image: node:8
   before_script:
-    - ./scripts/dev-start.sh
+    - ./dev-start.sh
   script:
     - yarn lint:critical
 
@@ -27,7 +27,7 @@ lint:
     - docker
   image: node:8
   before_script:
-    - ./scripts/dev-start.sh
+    - ./dev-start.sh
   script:
     - yarn lint
   allow_failure: true
@@ -38,7 +38,7 @@ test:
     - docker
   image: node:8
   before_script:
-    - ./scripts/dev-start.sh
+    - ./dev-start.sh
   script:
     - yarn test
 
@@ -49,7 +49,7 @@ build:android:debug:
     - node
     - react-native
   before_script:
-    - ./scripts/dev-start.sh
+    - ./dev-start.sh
   script:
     - ./scripts/build-android-debug.sh
   artifacts:
@@ -108,7 +108,7 @@ build:ios:debug:
     - node
     - react-native
   before_script:
-    - ./scripts/dev-start.sh
+    - ./dev-start.sh
   script:
     - ./scripts/build-ios-debug.sh
   artifacts:
