--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -100,8 +100,8 @@ android {
 
     defaultConfig {
         applicationId "com.helloworld.package"
-        minSdkVersion 19
-        targetSdkVersion 25
+        minSdkVersion rootProject.ext.minSdkVersion
+        targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 100
         versionName "0.1.0"
         ndk {
@@ -152,9 +152,7 @@ dependencies {
     compile project(':react-native-splash-screen')
     compile project(':react-native-keychain')
     compile fileTree(dir: "libs", include: ["*.jar"])
-    compile ("com.android.support:appcompat-v7:26.0.2") {
-        force = true
-    }
+    compile "com.android.support:appcompat-v7:${rootProject.ext.supportLibVersion}"
     compile "com.facebook.react:react-native:+"  // From node_modules
 }
 
