--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "name": "emiketic-starter-react-native",
   "version": "0.1.0",
-  "private": true
+  "private": true,
+  "dependencies": {
+    "react": "16.4.1",
+    "react-native": "0.56.1"
+  }
 }
