--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -149,6 +149,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-gesture-handler')
     compile project(':react-native-splash-screen')
     compile project(':react-native-keychain')
     compile fileTree(dir: "libs", include: ["*.jar"])
