--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
+  "private": true,
   "name": "emiketic-starter-react-native",
-  "version": "0.1.0",
-  "private": true
+  "version": "0.1.0"
 }
