Change api endpoint + stop dev

--- a/package.json
+++ b/package.json
@@ -1,60 +1,5 @@
 {
   "private": true,
-  "name": "HelloWorld",
-  "version": "0.1.0",
-  "engines": {
-    "node": "^8.0.0 || ^10.0.0",
-    "npm": "^5.0.0 || ^6.0.0"
-  },
-  "scripts": {
-    "start": "node node_modules/react-native/local-cli/cli.js start",
-    "android": "react-native run-android --no-packager --appId com.helloworld.package",
-    "ios": "react-native run-ios --no-packager",
-    "android-release": "react-native run-android --variant=release",
-    "ios-release": "react-native run-ios --configuration Release",
-    "test": "jest",
-    "lint": "eslint --ext .js ./",
-    "lint:critical": "eslint --no-eslintrc --config .eslintrc.critical.json ./",
-    "format": "npm run format:all && npm run format:js",
-    "format:all": "prettier './**/*.{md,json,js,css,scss}' --write",
-    "format:js": "eslint -o /dev/null --ext .js --fix ./ || true",
-    "postinstall": "./scripts/postinstall.sh"
-  },
-  "dependencies": {
-    "native-base": "~2.11.0",
-    "promise.prototype.finally": "~3.1.0",
-    "prop-types": "~15.7.1",
-    "react": "16.6.3",
-    "react-native": "0.58.4",
-    "react-native-gesture-handler": "~1.0.15",
-    "react-native-splash-screen": "~3.2.0",
-    "react-navigation": "~3.2.1",
-    "react-redux": "~6.0.0",
-    "redux": "~4.0.1",
-    "redux-localstorage": "~1.0.0-rc5",
-    "redux-logger": "~3.0.6",
-    "redux-thunk": "~2.3.0",
-    "starter-lib": "git+https://github.com/emiketic/emiketic-starter-lib.git#0.7.0"
-  },
-  "devDependencies": {
-    "@babel/core": "~7.2.2",
-    "babel-eslint": "~10.0.1",
-    "babel-jest": "24.1.0",
-    "babel-preset-react-native": "^5",
-    "eslint": "~5.13.0",
-    "eslint-config-airbnb": "~17.1.0",
-    "eslint-plugin-import": "~2.16.0",
-    "eslint-plugin-jsx-a11y": "~6.2.1",
-    "eslint-plugin-react": "~7.12.4",
-    "jest": "24.1.0",
-    "jest-react-native": "~18.0.0",
-    "metro-react-native-babel-preset": "0.51.1",
-    "prettier": "~1.16.4",
-    "react-test-renderer": "16.6.3"
-  },
-  "rnpm": {
-    "assets": [
-      "assets/fonts"
-    ]
-  }
+  "name": "emiketic-starter-react-native",
+  "version": "0.1.0"
 }
