--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -17,16 +17,7 @@ install:
   tags:
     - docker
   script:
-    - yarn
-
-lint-critical:
-  stage: test
-  tags:
-    - docker
-  before_script:
-    - ./dev-start.sh
-  script:
-    - yarn lint:critical
+    - yarn install
 
 lint:
   stage: test
@@ -35,8 +26,7 @@ lint:
   before_script:
     - ./dev-start.sh
   script:
-    - yarn lint
-  allow_failure: true
+    - yarn run lint
 
 test:
   stage: test
@@ -45,7 +35,7 @@ test:
   before_script:
     - ./dev-start.sh
   script:
-    - yarn test
+    - yarn run test
   allow_failure: true
 
 build:android:debug:
@@ -67,44 +57,32 @@ build:android:debug:
       - ./node_modules/
       - ./android/.gradle/
 
-appetize:android:debug:
+deploy:android:debug:
   stage: deploy
   dependencies:
     - build:android:debug
-  when: always
   cache: {}
   # only:
   #   - develop
   tags:
     - docker
   image: emiketic/essentials
-  script:
-    - ./scripts/appetize.sh ./build/app-debug.apk android
-
-upload:android:debug:
-  stage: deploy
-  dependencies:
-    - build:android:debug
-  when: always
-  cache: {}
-  # only:
-  #   - develop
-  tags:
-    - docker
-  image: emiketic/essentials
+  variables:
+    APPETIZE_PLATFORM: android
+    APPETIZE_ID: $APPETIZE_ANDROID_ID
   script:
     - ./scripts/deploy.sh ./build/app-debug.apk
 
 # android:release:build:
 #   stage: build
+#   only:
+#     - master
 #   tags:
 #     - android
 #     - node
 #     - react-native
-#   only:
-#     - master
 #   before_script:
-#     - yarn
+#     - ./dev-start.sh
 #   script:
 #     - ./scripts/build-android-release.sh
 #     - ./scripts/deploy.sh ./build/app-release.apk
@@ -131,44 +109,31 @@ build:ios:debug:
       - ./node_modules/
       - ./ios/Pods/
 
-appetize:ios:debug:
+deploy:ios:debug:
   stage: deploy
   dependencies:
     - build:ios:debug
-  when: always
   cache: {}
   # only:
   #   - develop
   tags:
     - docker
   image: emiketic/essentials
-  script:
-    - ./scripts/appetize.sh ./build/app-debug.zip ios
-
-upload:ios:debug:
-  stage: deploy
-  dependencies:
-    - build:ios:debug
-  when: always
-  cache: {}
-  # only:
-  #   - develop
-  tags:
-    - docker
-  image: emiketic/essentials
+  variables:
+    APPETIZE_PLATFORM: ios
+    APPETIZE_ID: $APPETIZE_IOS_ID
   script:
     - ./scripts/deploy.sh ./build/app-debug.zip
-
 # build:ios:release:
 #   stage: build
+#   only:
+#     - master
 #   tags:
 #     - ios
 #     - node
 #     - react-native
-#   only:
-#     - master
 #   before_script:
-#     - yarn
+#     - ./dev-start.sh
 #   script:
 #     - ./scripts/build-ios-release.sh
 #     - ./scripts/deploy.sh ./build/app-release.zip
