--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-  "extends": "airbnb",
+  "root": true,
+  "extends": ["eslint:recommended", "airbnb"],
   "plugins": ["react"],
   "parser": "babel-eslint",
   "parserOptions": {
@@ -15,15 +16,21 @@
     "node": true
   },
   "rules": {
+    "max-len": ["warn", { "code": 120 }],
+    "react/jsx-filename-extension": ["warn", { "extensions": [".js"] }],
     "arrow-parens": ["warn", "always"],
     "arrow-body-style": "off",
-    "react/jsx-no-bind": "off",
-    "no-underscore-dangle": "off",
-    "react/jsx-filename-extension": ["warn", { "extensions": [".js", ".jsx"] }],
+    "camelcase": "warn",
+    "no-underscore-dangle": "warn",
+    "no-param-reassign": "warn",
+    "no-unused-vars": "warn",
+    "class-methods-use-this": "warn",
+    "prefer-destructuring": "warn",
+    "prefer-const": "warn",
+    "no-shadow": "warn",
+    "no-empty": "warn",
     "import/prefer-default-export": "off",
-    "react/forbid-prop-types": "off",
-    "class-methods-use-this": "off",
-    "no-case-declarations": "off",
-    "import/no-named-as-default": "off"
+    "import/no-cycle": "warn",
+    "react/destructuring-assignment": "warn"
   }
 }
