--- a/ios/Podfile
+++ b/ios/Podfile
@@ -29,6 +29,8 @@ target 'HelloWorld' do
 
 
   # Add new pods below this line
+  pod 'RNCAsyncStorage', :path => '../node_modules/@react-native-community/async-storage'
+
   pod 'RNGestureHandler', :path => '../node_modules/react-native-gesture-handler'
 
   pod 'react-native-splash-screen', :path => '../node_modules/react-native-splash-screen'
